# fcnet

./: Cargo.toml  LICENSE  README.md
fcnet/: Cargo.toml  README.md
fcnet-cli/: Cargo.toml  README.md
fcnet-cli/src/: arguments.rs  main.rs
fcnet-core/: Cargo.toml
fcnet-core/src/: lib.rs
fcnet-embedded/: Cargo.toml
fcnet-embedded/src/: lib.rs  netns.rs  simple.rs  util.rs
fcnet-embedded/src/namespaced/: check.rs  delete.rs  mod.rs
fcnet-serve-cli/: Cargo.toml  README.md
fcnet-serve-cli/src/: arguments.rs  main.rs
fcnet-types/: Cargo.toml  README.md
fcnet-types/src/: lib.rs
fcnet-use-integrated/: Cargo.toml  README.md
fcnet-use-integrated/src/: lib.rs  simple.rs  util.rs
fcnet-use-integrated/src/namespaced/: add.rs  check.rs  delete.rs  mod.rs
fcnet/src/: _old.rs  backend.rs  lib.rs  namespaced.rs  netns.rs  shared.rs  simple.rs  util.rs
fcnet/src/namespaced/: add.rs  check.rs  delete.rs  mod.rs
fcnetd/: Cargo.toml  README.md
fcnetd-client/: Cargo.toml  README.md
fcnetd-client/src/: lib.rs  socket.rs
fcnetd/src/: main.rs  server.rs
src/: main.rs  netns.rs  simple.rs  tap.rs
