[package]
name = "fcnet"
version = "0.1.0"
edition = "2021"
description = "A user-friendly tool for Firecracker microVM networking"
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/fcnet"
readme = "README.md"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }

# tokio async rt + process for invoking iptables
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
futures = "0.3.30"
# netns
netns-rs = "0.1.0"
# iproute2 directly via rtnetlink
rtnetlink = "0.14.1"
netlink-packet-route = "0.19"
# tap device creation
tokio-tun = "0.11.5"
# cidr notation ips
cidr = "0.2.3"
