[package]
name = "fcnet-cli"
version = "0.3.0"
edition = "2021"
description = "A CLI wrapper around the fcnet library for Firecracker microVM networking"
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/fcnet"
readme = "README.md"

[dependencies]
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
fcnet-core = { path = "../fcnet-core" }
fcnet-embedded = { path = "../fcnet-embedded", version = "0.1.0", features = [
    "full",
] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
