[package]
name = "fcnet-cli"
version = "0.4.0"
edition = "2021"
description = "A Firecracker microVM networking solution: CLI wrapper."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[dependencies]
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
fcnet-types = { path = "../fcnet-types", version = "0.1.0" }
fcnet = { path = "../fcnet", version = "0.7.0", features = [
    "simple",
    "namespaced",
    "tokio-backend",
] }
tokio = { version = "1.40.0", features = ["rt"] }
