[package]
name = "fcnet-serve-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI wrapper for fcnet, which is used by the fcnet-use-cli implementation."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/fcnet"
readme = "README.md"

[dependencies]
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
fcnet = { path = "../fcnet" }
fcnet-use-integrated = { path = "../fcnet-use-integrated", version = "0.1.0", features = [
    "full",
] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
