[package]
name = "fcnet"
version = "0.6.0"
edition = "2021"
description = "Shared types for fcnet, the Firecracker networking solution. Requires a fcnet-use-* crate as a concrete implementation."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/fcnet"
readme = "README.md"

[dependencies]
cidr = "0.3.0"

[dev-dependencies]
fcnet = { path = ".", features = ["full"] }

[features]
simple = []
namespaced = []
full = ["simple", "namespaced"]
