[package]
name = "fcnet"
version = "0.6.0"
edition = "2021"
description = "An in-process Firecracker microVM networking backend based on fcnet-types."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/fcnet"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fcnet-types = { path = "../fcnet-types", version = "0.1.0" }

futures-util = { version = "0.3.31", default-features = false }
rtnetlink = "0.14.1"
netlink-packet-route = "0.19"
tokio-tun = "0.12.0"
cidr = "0.3.0"
thiserror = "1.0.64"
nftables = "0.5.0"
nftables-async = "0.1.1"
serde_json = "1.0.132"

nix = { version = "0.29.0", optional = true, features = [
    "mount",
    "sched",
    "process",
], default-features = false }
tokio = { version = "1.40.0", default-features = false, features = [
    "rt",
    "sync",
], optional = true }

[dev-dependencies]
fcnet = { path = ".", features = ["namespaced"] }

[features]
default = ["simple"]
full = ["simple", "namespaced"]
simple = ["fcnet-types/simple"]
namespaced = ["fcnet-types/namespaced", "dep:nix", "dep:tokio"]
