[package]
name = "fcnetd-client"
version = "0.2.0"
edition = "2021"
description = "A daemon-based Firecracker microVM networking backend based on fcnet-types."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fcnet-types = { path = "../fcnet-types", version = "0.1.0", features = [
    "full",
] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"

deadpool = { version = "0.12.1", default-features = false, features = [
    "managed",
], optional = true }

tokio = { version = "1.41.1", default-features = false, features = [
    "net",
], optional = true }
tokio-util = { version = "0.7.12", default-features = false, features = [
    "compat",
], optional = true }

[dev-dependencies]
fcnetd-client = { path = ".", features = ["deadpool"] }

[features]
default = []
connection-pool = []
deadpool = ["connection-pool", "dep:deadpool"]
tokio-socket = ["dep:tokio", "dep:tokio-util"]
