[package]
name = "fcnetd-client"
version = "0.2.0"
edition = "2021"
description = "A daemon-based Firecracker microVM networking backend based on fcnet-types."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
fcnet-types = { path = "../fcnet-types", version = "0.1.0", features = [
    "full",
] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

deadpool = { version = "0.12.1", default-features = false, features = [
    "managed",
], optional = true }

tokio = { version = "1.41.1", features = ["net", "io-util"], optional = true }
tokio-util = { version = "0.7.12", default-features = false, features = [
    "compat",
], optional = true }

async-net = { version = "2.0.0", optional = true }
futures-lite = { version = "2.5.0", optional = true }

[dev-dependencies]
fcnetd-client = { path = ".", features = ["full"] }

[features]
default = []
full = ["deadpool", "tokio-socket", "smol-socket"]
connection-pool = []
deadpool = ["connection-pool", "dep:deadpool"]
tokio-socket = ["dep:tokio", "dep:tokio-util"]
smol-socket = ["dep:async-net", "dep:futures-lite"]
