[package]
name = "fcnetd"
version = "0.2.0"
edition = "2021"
description = "A daemon process that receives rootless connections from fcnetd-client to perform rootful Firecracker microVM networking."
license = "MIT"
keywords = ["firecracker", "microvm", "networking"]
categories = ["network-programming"]
repository = "https://github.com/rust-firecracker/fcnet"
readme = "README.md"

[dependencies]
fcnet-types = { path = "../fcnet-types", version = "0.1.0", features = [
    "serde",
] }
fcnet = { path = "../fcnet", version = "0.7.0", features = [
    "simple",
    "namespaced",
    "tokio-backend",
] }
tokio = { version = "1.41.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
clap = { version = "4.5.20", features = ["derive"] }
nix = { version = "0.29.0", default-features = false, features = [
    "user",
    "fs",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
